<?xml version="1.0" encoding="utf-8"?>
<!--
    Devin Sterling
    2022 - 07 - 26
    Course Registration Waiting List
-->
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ViewStudentActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Information -->
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:id="@+id/studentDetails_fullName"
                style="@style/title"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/studentDetails_priority"
                style="@style/subtitle"
                android:text="@string/first_name" />

        </LinearLayout>

        <!-- Interactable Elements -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <Button
                android:id="@+id/studentDetails_editStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_student" />

            <Button
                android:id="@+id/studentDetails_removeStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_student" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>