<?xml version="1.0" encoding="utf-8"?>
<!--
    Devin Sterling
    2022 - 07 - 26
    Course Registration Waiting List
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background = "@color/hawk_red">

    <!-- picture container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/splash_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toTopOf="@+id/splash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:tint="@color/hawk_red"
            app:srcCompat="@drawable/icon" />
    </androidx.cardview.widget.CardView>

    <!-- Application title -->
    <TextView
        android:id="@+id/splash_title"
        style="@style/title"
        android:textColor="@color/white"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/splash_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_image" />

    <!-- Application Developer -->
    <TextView
        style="@style/white_text"
        android:id="@+id/splash_developer"
        android:text="@string/developer"
        app:layout_constraintBottom_toTopOf="@+id/splash_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_title" />

    <!-- Application Version -->
    <TextView
        style="@style/white_text"
        android:id="@+id/splash_version"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_developer" />

</androidx.constraintlayout.widget.ConstraintLayout>